se ingresa informacion y se agrega el archivo script

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     </div>
   </header>
 
+<button id="theme-toggle" aria-label="Cambiar tema">
+    🌙
+</button>
+
   <!-- PERFIL -->
   <section class="section">
     <div class="container">
@@ -41,15 +45,21 @@
     <div class="container">
       <h3>Habilidades Clave</h3>
       <div class="skills">
-        <span>Angular</span>
-        <span>Node.js</span>
-        <span>JavaScript</span>
-        <span>Express</span>
-        <span>SQL</span>
-        <span>Git</span>
-        <span>SCRUM</span>
-        <span>Liderazgo</span>
-        <span>Optimización de procesos</span>
+        <span class="hab1">Html</span>
+        <span class="hab1">Css</span>
+        <span class="hab1">Angular</span>
+        <span class="hab1">Node.js</span>
+        <span class="hab1">JavaScript</span>
+        <span class="hab1">Express</span>
+        <span class="hab1">Sequelize</span>
+        <span class="hab1">SQL</span>
+        <span class="hab1">Git</span>
+        <span class="hab2">SCRUM</span>
+        <span class="hab2">Liderazgo</span>
+        <span class="hab2">Optimización de procesos</span>
+        <span class="hab2">Pensamiento analítico</span>
+        <span class="hab2">Comunicación efectiva</span>
+        <span class="hab2">Trabajo en equipo</span>
       </div>
     </div>
   </section>
@@ -63,9 +73,17 @@
         <h4>Gerente de Operaciones / Product Owner</h4>
         <span>Air Laja SpA · 2024 – 2025</span>
         <p>
-          Lideré operaciones críticas y equipos de desarrollo,
-          asegurando cumplimiento normativo DGAC y entrega exitosa
-          de productos digitales alineados a expectativas del cliente.
+            <ul>
+                <li>
+                    Superviso y coordino operaciones críticas, asegurando vuelos seguros, eficientes y alineados con normativa DGAC.
+                </li>
+                <li>
+                    Actuo como nexo estratégico entre clientes, usuarios y equipo de desarrollo, priorizando backlog y requisitos del producto.
+                </li>
+                <li>
+                    Lidero equipos multidisciplinarios en el desarrollo de aplicaciones web.
+                </li>
+            </ul>
         </p>
       </div>
 
@@ -73,9 +91,17 @@
         <h4>Programador Junior</h4>
         <span>NTT Data Chile · 2021 – 2023</span>
         <p>
-          Desarrollo de aplicaciones web para el sector salud (FALP)
-          y colaboración en plataforma hospitalaria ehCOS en Argentina,
-          trabajando bajo metodologías ágiles.
+            <ul>
+                <li>
+                    Desarrollo de aplicaciones web para FALP.
+                </li>
+                <li>
+                    Colaboración en la plataforma ehCOS, sistema de administración hospitalaria en Argentina.
+                </li>
+                <li>
+                    Trabajo bajo metodologías ágiles (SCRUM).
+                </li>
+            </ul>
         </p>
       </div>
 
@@ -83,8 +109,14 @@
         <h4>Programador Junior</h4>
         <span>Nexo Sistemas SpA · 2019 – 2021</span>
         <p>
-          Desarrollo y mantenimiento de aplicaciones web,
-          trabajo colaborativo en equipos de software.
+            <ul>
+                <li>
+                    Desarrollo y mantenimiento de sitios y aplicaciones web.
+                </li>
+                <li>
+                    Soporte técnico a equipos computacionales.
+                </li>
+            </ul>
         </p>
       </div>
 
@@ -104,15 +136,27 @@
     </div>
   </section>
 
+  <section class="section">
+    <div class="container">
+      <h3>Cursos y capacitaciones</h3>
+      <ul class="curso">
+        <li>Desarrollo de software Java</li>
+        <li>Bootcamps Full Stack Java</li>
+        <li>Bootcamps Full Stack JavaScript</li>
+        <li>Operador RPAS</li>
+      </ul>
+    </div>
+  </section>
+
   <!-- CONTACTO -->
-  <section id="contacto" class="section contact">
+  <section id="contacto" class="section light contact">
     <div class="container">
       <h3>Contacto</h3>
       <p>📍 Laja, Chile</p>
       <p>📞 +56 9 7659 2251</p>
       <p>✉️ npohl82@gmail.com</p>
       <p>
-        🔗 <a href="https://www.linkedin.com/in/norman-pohl-34724b6b/" target="_blank">
+        🔗 <a href="https://www.linkedin.com/in/norman-pohl-aenishanslin-34724b6b/" target="_blank">
           LinkedIn
         </a>
       </p>
@@ -120,8 +164,9 @@
   </section>
 
   <footer>
-    <p>© 2026 · Norman Pohl</p>
+    <p>© 2026 · Norman Pohl Aenishanslin</p>
   </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
